# AI_Reference_Application

./: .gitignore  Dockerfile  main.py  pyproject.toml
app/: config.py  main.py
app/common/: __init__.py  database.py  logging.py
app/routers/: api_flow.py  normal_chat_flow.py  normal_flow.py  rag_flow.py  utils.py
app/services/langchain/: chains.py  llm.py  retriever.py
app/services/prompts/: api_chat_prompt.py  normal_chat_prompt.py  rag_chat_prompt.py
app/services/utils/: api_flow_utils.py  normal_chat_flow_utils.py  normal_flow_utils.py  rag_flow_utils.py
