[tool.poetry]
name = "ai-reference-application"
version = "0.1.0"
description = ""
authors = ["tariqamarneh <tariqs.naser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.6.3"}
motor = "^3.4.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
python-multipart = "^0.0.9"
chromadb = "^0.4.24"
pypdf = "^4.2.0"
pypdf2 = "^3.0.1"
langchain-mongodb = "^0.1.3"
sse-starlette = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
